--- a/subject3.html
+++ b/subject3.html
@@ -8,9 +8,9 @@
   </head>
   <body>
     <h1>The Best Colors</h1>
-    <div><span>Tomato</span> <span>#FF6347</span></div>
-    <div><span>Teal</span> <span>#008080</span></div>
-    <div><span>Burlywood</span> <span>#DEB887</span></div>
-    <div><span>Thistle</span> <span>#D7BFD7</span></div>
+    <div><span class="color-name">Tomato</span> <span>#FF6347</span></div>
+    <div><span class="color-name">Teal</span> <span>#008080</span></div>
+    <div><span class="color-name">Burlywood</span> <span>#DEB887</span></div>
+    <div><span class="color-name">Thistle</span> <span>#D7BFD7</span></div>
   </body>
 </html>
