--- a/subject4.html
+++ b/subject4.html
@@ -7,13 +7,13 @@
     <title>repl.it</title>
   </head>
   <body>
-    <span>
+    <span class="circle-box">
       <div class="circle"></div>
       <div class="circle"></div>
       <div class="circle"></div>
     </span>
 
-    <span>
+    <span class="square-box">
       <div class="square"></div>
       <div class="square"></div>
       <div class="square"></div>
