--- a/subject4.html
+++ b/subject4.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <span class="circle-box">
-      <div class="circle"></div>
-      <div class="circle"></div>
-      <div class="circle"></div>
+      <div class="circle-box__circle"></div>
+      <div class="circle-box__circle"></div>
+      <div class="circle-box__circle"></div>
     </span>
 
     <span class="square-box">
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
-      <div class="square"></div>
+      <div class="square-box__square"></div>
+      <div class="square-box__square"></div>
+      <div class="square-box__square"></div>
+      <div class="square-box__square"></div>
+      <div class="square-box__square"></div>
     </span>
   </body>
 </html>
