--- a/subject5.html
+++ b/subject5.html
@@ -26,7 +26,8 @@
           src="https://search.pstatic.net/common/?src=http%3A%2F%2Fimgnews.naver.net%2Fimage%2F5308%2F2021%2F10%2F05%2F0000074202_001_20211005180629786.jpg&type=sc960_832"
         />
         <div class="playing-music__title">
-          Strawberry Moon
+          <p>Strawberry</p>
+          <p>Moon</p>
           <div class="playing-music__artist">by IU</div>
         </div>
       </div>
