--- a/subject6.html
+++ b/subject6.html
@@ -24,32 +24,104 @@
       <input class="search__input" placeholder="Search books..." />
       <i class="fas fa-search fa-lg"></i>
     </div>
-    <div class="bookOfTheDay">
-      <div class="bookOfTheDay__title">Book of the day</div>
-      <div class="bookOfTheDay__book">
-        <img src="https://m.media-amazon.com/images/I/512eZ2k0z0L.jpg" />
-        <div class="bookOfTheDay__info">
-          <p>No Fixed Abode</p>
-          <p>Journey Through</p>
-          <div class="bookOfTheDay__star">
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-            <i class="fas fa-star"></i>
-          </div>
-          <div class="bookOfTheDay__btn">
-            <div class="bookOfTheDay__journey">Journey</div>
-            <div class="bookOfTheDay__biography">Biography</div>
-          </div>
-          <div class="bookOfTheDay__buy">
-            <div class="bookOfTheDay__bookmark">
-              <i class="fas fa-bookmark fa-lg"></i>
+    <div class="main">
+      <div class="bookOfTheDay">
+        <div class="bookOfTheDay__title">Book of the day</div>
+        <div class="bookOfTheDay__book">
+          <img src="https://m.media-amazon.com/images/I/512eZ2k0z0L.jpg" />
+          <div class="bookOfTheDay__info">
+            <p>No Fixed Abode</p>
+            <p>Journey Through</p>
+            <div class="bookOfTheDay__star">
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star"></i>
             </div>
-            <div class="bookOfTheDay__buyBtn">Book now</div>
+            <div class="bookOfTheDay__btn">
+              <div class="bookOfTheDay__journey">Journey</div>
+              <div class="bookOfTheDay__biography">Biography</div>
+            </div>
+            <div class="bookOfTheDay__buy">
+              <div class="bookOfTheDay__bookmark">
+                <i class="fas fa-bookmark fa-lg"></i>
+              </div>
+              <div class="bookOfTheDay__buyBtn">Book now</div>
+            </div>
           </div>
         </div>
       </div>
+      <div class="topAdventures">
+        <div class="topAdventures__title">Top Adventures</div>
+        <ul class="topAdventures__booklist">
+          <li class="topAdventures__book1">
+            <img
+              src="https://image.yes24.com/momo/TopCate2343/MidCate006/234259264.jpg"
+            />
+            <div class="topAdventures__star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+          </li>
+          <li class="topAdventures__book2">
+            <img src="https://image.yes24.com/momo/TopCate2402/MidCate005/240143841.jpg" />
+            <div class="topAdventures__star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>  
+        </li>
+          <li class="topAdventures__book3">
+            <img src="https://image.yes24.com/goods/63030166/XL" />
+            <div class="topAdventures__star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>  
+        </li>
+          <li class="topAdventures__book4">
+            <img src="https://image.yes24.com/momo/TopCate897/MidCate003/89620868.jpg" />
+            <div class="topAdventures__star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>  
+        </li>
+          <li class="topAdventures__book5">
+            <img src="https://image.yes24.com/momo/ForeignBooks/MidCate02858/328577322.jpg" />
+            <div class="topAdventures__star">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>  
+        </li>
+        </div>
+    </ul>
+    <div class="popularAuthors">
+        <div class="popularAuthors__title">Popular Authors</div>
+        <div class="popularAuthors__info">
+            <img src="https://awoiaf.westeros.org/images/thumb/4/4b/George_R_R_Martin.jpg/1200px-George_R_R_Martin.jpg" />
+            <div class="popularAuthor__name">
+                <p>George Raymond</p>
+                <p>Richard Martin</p>
+
+            <div class="popularAuthor__info">
+                <p>Morden American science</p>
+                <p>fiction writer, screenwriter,</p>
+                <p>producer and editor, winner</p>
+                <p>of many literary awards.</p>
+                <p>why are you reading this??</p>
+            </div>
+        </div>
+        </div>
+    </div>
     </div>
   </body>
 </html>
