--- a/subject7.html
+++ b/subject7.html
@@ -102,6 +102,27 @@
         <i class="fas fa-arrow-left"></i>
         <i class="fas fa-ellipsis-v"></i>
       </div>
+      <div class="playing-music__main">
+        <img
+          src="https://image.bugsm.co.kr/album/images/500/202860/20286013.jpg"
+        />
+        <div class="playing-music__title">Blueming</div>
+        <div class="playing-music__artist">IU</div>
+        <div class="timeline">
+          <div class="timeline__time">
+            <div>00:45</div>
+            <div>03:37</div>
+          </div>
+          <input type="range" class="timeline__range" />
+        </div>
+        <div class="timeline__control-box">
+          <i class="fas fa-sync fa-lg"></i>
+          <i class="fas fa-step-backward fa-2x"></i>
+          <i class="fas fa-play-circle fa-4x"></i>
+          <i class="fas fa-step-forward fa-2x"></i>
+          <i class="fas fa-random fa-lg"></i>
+        </div>
+      </div>
     </div>
   </body>
 </html>
