--- a/subject7.html
+++ b/subject7.html
@@ -37,6 +37,13 @@
       <ul class="musiclist">
         <li class="musiclist__musicbox">
           <div class="musiclist__music">
+            <div class="now-playing">
+              <div class="square-box">
+                <div class="square-box__square"></div>
+                <div class="square-box__square"></div>
+                <div class="square-box__square"></div>
+              </div>
+            </div>
             <img
               src="https://image.bugsm.co.kr/album/images/500/202860/20286013.jpg"
             />
