--- a/subject7.html
+++ b/subject7.html
@@ -26,7 +26,7 @@
         />
         <div class="artist__name">
           <p>IU</p>
-          <p>K-Hip-Hop-Queen</p>
+          <p>국힙원탑</p>
         </div>
         <div class="artist__genre">Rap, Hip-Hop</div>
       </div>
@@ -49,7 +49,7 @@
             />
             <div class="musiclist__title">
               <div class="musiclist__artist">IU</div>
-              <div class="musiclist__music-title">Blueming</div>
+              <div class="musiclist__music-title">블루밍</div>
             </div>
             <i class="fas fa-ellipsis-v fa-lg"></i>
           </div>
@@ -61,7 +61,7 @@
             />
             <div class="musiclist__title">
               <div class="musiclist__artist">IU</div>
-              <div class="musiclist__music-title">Lilac</div>
+              <div class="musiclist__music-title">라일락</div>
             </div>
             <i class="fas fa-ellipsis-v fa-lg"></i>
           </div>
@@ -73,7 +73,7 @@
             />
             <div class="musiclist__title">
               <div class="musiclist__artist">IU</div>
-              <div class="musiclist__music-title">You&I</div>
+              <div class="musiclist__music-title">너랑 나</div>
             </div>
             <i class="fas fa-ellipsis-v fa-lg"></i>
           </div>
@@ -85,7 +85,7 @@
             />
             <div class="musiclist__title">
               <div class="musiclist__artist">IU</div>
-              <div class="musiclist__music-title">Peach</div>
+              <div class="musiclist__music-title">복숭아</div>
             </div>
             <i class="fas fa-ellipsis-v fa-lg"></i>
           </div>
@@ -113,7 +113,7 @@
         <img
           src="https://image.bugsm.co.kr/album/images/500/202860/20286013.jpg"
         />
-        <div class="playing-music__title">Blueming</div>
+        <div class="playing-music__title">블루밍</div>
         <div class="playing-music__artist">IU</div>
         <div class="timeline">
           <div class="timeline__time">
